Prevent horizontal scroll

--- a/src/main/web/florence/scss/components/_builder.scss
+++ b/src/main/web/florence/scss/components/_builder.scss
@@ -18,6 +18,7 @@
         float: left;
         padding: ($lineheight * 2) $gutter $lineheight $gutter;
         overflow-y: scroll;
+        overflow-x: hidden;
 
         &--chart {
             width: $col--6;
